Fix contrast issues

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,7 +1,7 @@
 @import '../utils/_variables.scss';
 
 .footer {
-    background-color: var(--color-2);
+    background-color: var(--color-1);
     font-family: var(--style-font-1);
     color: var(--color-3);
     padding: 2rem;
