--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -7,11 +7,52 @@
   display: block;
   letter-spacing: 0.2rem;
   font-family: inherit;
+  opacity: 100%;
 
   span {
-    color: var(--color-1);
+    color: var(--color-2);
     margin-right: 0.2rem;
     font-family: inherit;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    color: var(--color-2);
+
+    span {
+      color: var(--color-2);
+    }
+  }
+}
+
+.titleWrapper {
+  display: inline-block;
+  position: absolute;
+  z-index: 10;
+  font-family: var(--style-font-1);
+  font-weight: 1000;
+  background-color: var(--color-6);
+  opacity: 100%;
+  bottom: 15rem;
+  left: 1rem;
+  margin-top: 31vh;
+  padding: 1rem;
+  width: 75vw;
+
+  @media screen and (max-width: $md-max) {
+    width: 100vw;
+    left: 0;
+  }
+
+  p {
+    padding: 0 0.5rem;
+    font-family: inherit;
+    font-size: 1.75rem;
+    letter-spacing: 0;
+    font-weight: 100;
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+    color: inherit;
+
   }
 }
 
@@ -24,7 +65,9 @@
   width: 100vw;
   display: flex;
   align-items: center;
-  background-image: var(--primary-gradient);
+  background-image: url('../public/images/background-forest.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 
   p {
     &:nth-child(2) {
@@ -40,52 +83,18 @@
     background-image: url('../public/images/background-forest.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-image: var(--primary-gradient);
+
     opacity: var(--semi-transparent);
     font-family: var(--style-font-1);
 
-    .titleWrapper {
-      display: inline-block;
-      font-family: inherit;
-      font-weight: 1000;
-      opacity: 100%;
-      margin-top: 31vh;
-      padding: 1rem;
 
-    }
 
-    h1,
-    p {
-      background-color: var(--color-4);
-
-      @media (prefers-color-scheme: dark) {
-        background-color: rgba(0, 0, 0, 0%);
-
-        @media screen and (max-width: $md-max) {
-          background-color: var(--color-5);
-        }
-      }
-
-      border-radius: 0.25rem;
-    }
 
     h1 {
       padding: 0 1rem;
     }
 
-    p {
-      padding: 0 0.5rem;
-      font-family: inherit;
-      font-size: 1.75rem;
-      letter-spacing: 0;
-      font-weight: 100;
-      writing-mode: vertical-lr;
-      text-orientation: upright;
-      color: var(--color-1);
-
-      @media (prefers-color-scheme: dark) {
-        color: inherit;
-      }
-    }
   }
 
   @media only screen and (max-width:$sm-max) {
