--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,15 +4,17 @@
 @import '../utils/_variables.scss';
 
 :root {
-  --color-1: rgb(240, 240, 220);
-  --color-2: rgb(170, 170, 140);
+  --color-1: rgb(240, 250, 240);
+  --color-2: black;
   --color-3: #53744f;
-  --color-4: rgba(100, 100, 70, 0.4);
+  --color-4: rgba(90, 100, 90, 0.6);
   --color-5: rgba(25, 80, 25, 0.5);
+  --color-6: rgb(130, 145, 130);
+
   --footer-height: 10vh;
   --main-height: 100vh;
-  --semi-transparent: 85%;
-  --primary-gradient: radial-gradient(var(--color-4) 5%, var(--color-1) 75%, var(--color-1) 60%);
+  --semi-transparent: 55%;
+  --primary-gradient: radial-gradient(var(--color-4) 1%, var(--color-1) 25%, var(--color-1) 30%);
   --style-font-1: 'Amatic SC', 'Oswald', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
   @media (prefers-color-scheme: dark) {
@@ -21,6 +23,8 @@
     --color-3: #53744f;
     --color-4: rgba(220, 220, 220, 0.6);
     --color-5: rgba(0, 0, 0, 0.3);
+    --color-6: rgb(30, 40, 30);
+
     --semi-transparent: 70%;
   }
 }
@@ -41,6 +45,16 @@ body {
 
   *:focus {
     outline: 1px solid var(--color-3);
+  }
+}
+
+.my-rhombus {
+  transform: skewX(45deg) scaleY(cos(45deg));
+}
+
+.my-rotate {
+  @media screen and (min-width: $md-max) {
+    transform: rotate(2deg);
   }
 }
 
@@ -283,17 +297,20 @@ h1.my-title {
 
 .my-logo {
   position: fixed;
-  z-index: 10;
+  z-index: 11;
   top: 0.1rem;
   left: 0.1rem;
   height: 4rem;
   width: 4rem;
-  background-color: var(--color-2);
-  opacity: var(--semi-transparent);
   border-radius: 0.2rem;
 
   @media only screen and (max-width:$md-max) {
     display: none;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    background-color: var(--color-2);
+    opacity: var(--semi-transparent);
   }
 }
 
